# docking-pipeline

./: .gitignore  README.md  pyproject.toml
configs/: example_pipeline.yaml  rnaseL.yaml  test_0_9999.yaml
dirty-task/: top_ligands.csv
dirty-task/compare_with_disney/: 1912054.cif
dirty-task/unimol_gnina_rescore/: prep_summary.csv
dirty-task/unimol_gnina_rescore/final/: wqr_rescored_with_unimol_gnina.csv
dirty-task/unimol_gnina_rescore/input_ligands/: MOL_10677249_isomer_0.sdf  MOL_10821970_isomer_1.sdf  MOL_10849436_isomer_1.sdf  MOL_10888322_isomer_0.sdf  MOL_10967256_isomer_3.sdf  MOL_10994328_isomer_0.sdf  MOL_11014841_isomer_0.sdf  MOL_11500060_isomer_0_chiral_N_isomer_1.sdf  MOL_11651598_isomer_1_chiral_N_isomer_0.sdf  MOL_11653998_isomer_0_chiral_N_isomer_75.sdf  MOL_12114944_isomer_1.sdf  MOL_12513756_isomer_0_chiral_N_isomer_1.sdf  MOL_13114762_isomer_2.sdf  MOL_13118088_isomer_0.sdf  MOL_13120_isomer_0.sdf  MOL_1806990_isomer_1.sdf  MOL_291708_isomer_0_chiral_N_isomer_1.sdf  MOL_3416867_isomer_0.sdf  MOL_4400570_isomer_1.sdf  MOL_5122428_isomer_1.sdf  MOL_5432735_isomer_0.sdf  MOL_5627712_isomer_0.sdf  MOL_5833695_isomer_0.sdf  MOL_6121286_isomer_0.sdf  MOL_6144705_isomer_1.sdf  (+10 more)
docs/: environment_plan.md  pipeline_todo.md  remote_report_20260423.md
scripts/: analyze_remote_results.py  remote_env_check.sh  rescore_cif_with_unimol_gnina.py  rescore_csv_h100.sbatch  rescore_csv_with_unimol_gnina.py  setup_remote_envs.sh
slurm/: README.md
src/docking_pipeline/: __init__.py  cli.py  controller.py  pipeline_config.py  slurm_render.py
(+54 files in other folders)
