[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "docking-pipeline"
version = "0.1.0"
description = "Slurm-oriented docking pipeline for Uni-Dock2, Uni-Mol Docking V2, and gnina."
requires-python = ">=3.10"

[project.scripts]
docking-pipeline = "docking_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
